--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "nodemon": "nodemon --exec babel-node app.js --ignore public/",
-    "webpack": "webpack -wd"
+    "webpack": "webpack --mode production"
   },
   "keywords": [
     "Rank",
@@ -20,19 +20,18 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "webpack-dev-middleware": "^3.6.1"
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
@@ -40,3 +39,4 @@
     "webpack-dev-server": "^3.2.1"
   }
 }
+
