--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
@@ -39,4 +40,3 @@
     "webpack-dev-server": "^3.2.1"
   }
 }
-
