--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "ahmed menbari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-latest": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
