--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "babel-preset-latest": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.3-alpha.1",
     "express-handlebars": "^3.0.2",
     "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "save": "^2.3.3"
