--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "babel-preset-latest": "^6.24.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.1",
     "express-handlebars": "^3.0.2",
