--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "react": "^16.8.4",
+    "react-alert": "^5.2.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.8.4",
     "save": "^2.3.3"
   },
