--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-latest": "^6.24.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.1",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.8.4",
     "react-alert": "^5.2.0",
     "react-alert-template-basic": "^1.0.0",
